adds horoscope links to the homepage

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>My Zodiac API</h1>
     <ul>
+      Zodiac
       <li><a href="/zodiac">All Zodiac Signs</a></li>
       <li><a href="/zodiac/1">Aquarius</a></li>
       <li><a href="/zodiac/2">Aries</a></li>
@@ -22,6 +23,21 @@
       <li><a href="/zodiac/10">Scorpio</a></li>
       <li><a href="/zodiac/11">Taurus</a></li>
       <li><a href="/zodiac/12">Virgo</a></li>
+    </ul>
+    <ul>
+      Horoscopes
+      <li><a href="/horoscopes/aquarius">Aquarius</a></li>
+      <li><a href="/horoscopes/aries">Aries</a></li>
+      <li><a href="/horoscopes/cancer">Cancer</a></li>
+      <li><a href="/horoscopes/capricorn">Capricorn</a></li>
+      <li><a href="/horoscopes/gemini">Gemini</a></li>
+      <li><a href="/horoscopes/leo">Leo</a></li>
+      <li><a href="/horoscopes/libra">Libra</a></li>
+      <li><a href="/horoscopes/pisces">Pisces</a></li>
+      <li><a href="/horoscopes/sagittarius">Sagittarius</a></li>
+      <li><a href="/horoscopes/scorpio">Scorpio</a></li>
+      <li><a href="/horoscopes/taurus">Taurus</a></li>
+      <li><a href="/horoscopes/virgo">Virgo</a></li>
     </ul>
   </body>
 </html>
